--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "hello-chrome-extension",
   "version": "0.1.0",
   "description": "Hello, world! For learning how to make Chrome extensions.",
-  "permissions": [ "storage" ],
+  "permissions": [ "declarativeContent", "storage" ],
   "background": {
     "scripts": [ "background.js" ],
     "persistent": false
