--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Hello, world! For learning how to make Chrome extensions.",
   "permissions": [ "activeTab", "declarativeContent", "storage" ],
   "background": {
-    "scripts": [ "background.js" ],
+    "scripts": [ "background.js", "options.js" ],
     "persistent": false
   },
   "page_action": {
@@ -22,5 +22,6 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
+  "options_page": "options.html",
   "manifest_version": 2
 }
